add switch terminal and update to MD 2.0